# backend/src/main/java/com/myfitnessapp/controllers/EjercicioController.java
@@ -1,7 +1,7 @@
 package com.myfitnessapp.controllers;
 
-import com.myfitnessapp.model.ejercicio.Ejercicio;
 import com.myfitnessapp.dto.request.EjercicioReq;
+import com.myfitnessapp.model.ejercicio.Ejercicio;
 import com.myfitnessapp.services.EjercicioService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
@@ -9,13 +9,7 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 @RestController
 @RequestMapping("/api/ejercicios")
