# backend/src/main/java/com/myfitnessapp/dto/request/RutinaReq.java
@@ -1,10 +1,7 @@
 package com.myfitnessapp.dto.request;
 
-import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotEmpty;
 import jakarta.validation.constraints.NotNull;
-import java.util.ArrayList;
-import java.util.List;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
@@ -22,7 +19,5 @@ public class RutinaReq {
   @NotEmpty(message = "La descripción no debe estar vacía")
   @NotNull(message = "La descripción no debe estar vacía")
   private String descripcion;
-  @Valid
-  private List<ItemRutinaReq> items = new ArrayList<>();
 
 }
